--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -14,7 +14,8 @@
 
                 Since its inception, Vilpa Films has help projects to reach an innovative storytelling and positioning
                 to their best market potential. By fostering strong
-                creative partnerships and media distribution in places like the Cannes Film Festival, Dundas Square and Times Square, Vilpa Films is committed
+                creative partnerships and media distribution in places like the Cannes Film Festival, Dundas Square and
+                Times Square, Vilpa Films is committed
                 to contributing to the evolving global cinema. <br> <br>
                 <a href="/contact" class="waves-effect waves-light btn #ffab00 amber accent-4 center"
                     style="color: black; font-weight:bolder">Contact</a>
@@ -23,9 +24,43 @@
 
         </div>
     </div>
+
     <div class="awardsDiv ">
         <div class="container">
             <div class="row">
+                <div class="col s12 m6 imageCannes"></div>
+                <div class="col s12 m6 ">
+                    <h2 class="sforzandoTitlesHome">Sforzando</h2>
+                    <h5 class="sforzandoTitlesHome">Our most recent project, tells the story of a determined musician that wins the role of leading
+                        violinist in a dance production of a famous piece, but his obsession with perfection drags him
+                        into a dark spiral, threatening to drive him insane.</h5>
+                    <h5 class="sforzandoTitlesHome boldL" style="color: gray;">Promotion on Billboards for Cannes Film Festival 2025 — Expected release: 2026</h5>
+                    <br>
+                    <img class="responsive-img sforzandoTitlesHome" src="/assets/images/1.jpg" alt="">
+                    <br> <br>
+                    <img class="responsive-img sforzandoTitlesHome" src="/assets/images/5.jpg" alt="">
+                    
+                    
+                </div>
+            </div>
+            <div class="row">
+                
+                <div class="col s12 m4">
+                    <img class="responsive-img" src="/assets/images/4.jpg" alt="">
+                </div>
+                <div class="col s12 m4">
+                    <img class="responsive-img" src="/assets/images/3.jpg" alt="">
+                </div>
+                <div class="col s12 m4">
+                    <img class="responsive-img" src="/assets/images/2.jpg" alt="">
+                </div>
+            </div>
+            
+        </div>
+        <div class="container">
+            <div class="row">
+                <h1>Other projects:</h1>
+                <br>
                 <div class="col s12 m4">
                     <div class="card ">
                         <div class="card-image" onclick="location.href='#';">
