--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <meta name="description" content="Escritor de novela de crimen">
     <meta name="keywords"
         content="Impresión, vinil, backlite, Publicidad impresa, Medios impresos, Stoppers, espectaculares, Valla publicitarias, Material pop, Banners, Lonas, Viniles, Imprenta, Cenefa, Mupi, Posters, Danglers, Standees, Mantas, Faldones, Signs, Anuncios espectaculares, Anuncios impresos, Precio de espectaculares, Medios masivos">
-    <link rel="shortcut icon" href="assets/images/logoVilpaLetras.jpg">
+    <link rel="shortcut icon" href="assets/images/logoTab.png">
     <script src="https://kit.fontawesome.com/a077a0470e.js" crossorigin="anonymous"></script>
     <title>Vilpa Films</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
