--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,50 +1,77 @@
 <div class="incioDiv">
     <div class="divBannerMovies"></div>
-    <div class="bannerStory1"></div>
-    <div class="bannerStory2"></div>
+    {{!-- <div class="bannerStory1"></div>
+    <div class="bannerStory2"></div> --}}
     <div class="aboutDiv">
         <div class="row">
             <br>
             <h5 class="titleVilpa"> <span style="font-weight: bolder; font-size: 3rem;">Vilpa Films</span> is a dynamic
-                independent production company dedicated to supporting projects in the
-                early stages of development and pre-production. With a focus on creating exposure and building
-                compelling narratives, Vilpa Films aims to enhance the final value of its projects, preparing them
-                for successful distribution in the global market or premieres at prestigious international film
-                festivals. <br> <br>
+                independent production company dedicated to supporting projects with strong production potential and to
+                distributing a highly curated catalog of Oscar, BAFTA, and Cannes award-winning films. <br> <br>
 
-                Since its inception, Vilpa Films has help projects to reach an innovative storytelling and positioning
-                to their best market potential. By fostering strong
-                creative partnerships and media distribution in places like the Cannes Film Festival, Dundas Square and
-                Times Square, Vilpa Films is committed
-                to contributing to the evolving global cinema. <br> <br>
-                <a href="/contact" class="waves-effect waves-light btn #ffab00 amber accent-4 center"
-                    style="color: black; font-weight:bolder">Contact</a>
+
             </h5>
-            <br>
+
 
         </div>
     </div>
+    <div class="divProducts">
+        <div class="container">
+            <div class="row">
+                <h1 class="centered">OUR SERVICES</h1>
+                <div class="col s12 m4">
+                    <div class="card ">
+                        <div class="card-image" onclick="location.href='#';">
+                            <img src="/assets/images/broadkst.jpg">
+                        </div>
 
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card ">
+                        <div class="card-image" onclick="location.href='#';">
+                            <img src="/assets/images/popkrn.jpg">
+
+
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card ">
+                        <div class="card-image" onclick="location.href='#';">
+                            <img src="/assets/images/koverage.jpg">
+
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="awardsDiv ">
         <div class="container">
             <div class="row">
                 <div class="col s12 m6 imageCannes"></div>
                 <div class="col s12 m6 ">
-                    <h2 class="sforzandoTitlesHome">Sforzando</h2>
-                    <h5 class="sforzandoTitlesHome">Our most recent project, tells the story of a determined musician that wins the role of leading
+                    <h2 class="sforzandoTitlesHome">The undertone of David Jansen</h2>
+                    <h5 class="sforzandoTitlesHome">Our most recent project, tells the story of a determined musician
+                        that wins the role of leading
                         violinist in a dance production of a famous piece, but his obsession with perfection drags him
                         into a dark spiral, threatening to drive him insane.</h5>
-                    <h5 class="sforzandoTitlesHome boldL" style="color: gray;">Promotion on Billboards for Cannes Film Festival 2025 — Expected release: 2026</h5>
+                    <h5 class="sforzandoTitlesHome boldL" style="color: gray;">Promotion on Billboards for Cannes Film
+                        Festival 2025 — Expected release: 2026</h5>
                     <br>
                     <img class="responsive-img sforzandoTitlesHome" src="/assets/images/1.jpg" alt="">
                     <br> <br>
                     <img class="responsive-img sforzandoTitlesHome" src="/assets/images/5.jpg" alt="">
-                    
-                    
+
+
                 </div>
             </div>
             <div class="row">
-                
+
                 <div class="col s12 m4">
                     <img class="responsive-img" src="/assets/images/4.jpg" alt="">
                 </div>
@@ -55,7 +82,7 @@
                     <img class="responsive-img" src="/assets/images/2.jpg" alt="">
                 </div>
             </div>
-            
+
         </div>
         <div class="container">
             <div class="row">
