--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -20,16 +20,16 @@
             <div class="row">
                 <h1 class="centered">OUR SERVICES</h1>
                 <div class="col s12 m4">
-                    <div class="card ">
-                        <div class="card-image" onclick="location.href='#';">
+                    <div class="card pointer serviceCard">
+                        <div class="card-image" onclick="location.href='/broadkst';">
                             <img src="/assets/images/broadkst.jpg">
                         </div>
 
                     </div>
                 </div>
                 <div class="col s12 m4">
-                    <div class="card ">
-                        <div class="card-image" onclick="location.href='#';">
+                    <div class="card pointer serviceCard">
+                        <div class="card-image" onclick="location.href='/popkrn';">
                             <img src="/assets/images/popkrn.jpg">
 
 
@@ -38,8 +38,8 @@
                     </div>
                 </div>
                 <div class="col s12 m4">
-                    <div class="card ">
-                        <div class="card-image" onclick="location.href='#';">
+                    <div class="card pointer serviceCard">
+                        <div class="card-image" onclick="location.href='/koverage';">
                             <img src="/assets/images/koverage.jpg">
 
 
