added new terms of KOVERAGE

--- a/views/terms-koverage.handlebars
+++ b/views/terms-koverage.handlebars
@@ -39,8 +39,105 @@
                         Film:</span>
                     Exclusively open to women. This category includes coverage services plus the opportunity to be
                     considered for production/adaptation.</li>
+            </ul> <br>
+            Scripts must meet the following criteria: <br> <br>
+            <ul>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> Written <span class="boldL">only in
+                        English.</span></li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> Must be <span class="boldL">short films
+                        only.</span> Feature-length scripts are not accepted.</li>
+
+            </ul>
+            </p>
+        </div>
+        <hr>
+        <div class="row">
+            <h5 class="boldL">3. Submission Deadlines</h5>
+            <ul>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> All selected applicants must submit
+                    their final scripts <span class="boldL">no later than October 10, 2026.</span></li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> The results of the winning submissions
+                    will be announced on <span class="boldL">December 24, 2026.</span></li>
             </ul>
         </div>
+        <hr>
+        <div class="row">
+            <h5 class="boldL">4. Coverage Services Provided</h5>
+            <p>All three categories (Basic, Premium, Women in Film) include the following services:
+            <ul>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> A <span class="boldL">3-page
+                        industry-level coverage report</span> analyzing project viability and market potential.</li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> Professional notes from the assigned
+                    evaluator.</li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> The opportunity to schedule a <span
+                        class="boldL">30-minute call</span> with Vilpa Films to discuss these notes.</li>
+            </ul>
+            </p>
+        </div>
+        <hr>
+        <div class="row">
+            <h5 class="boldL">5. Production Consideration (ONLY Premium & Women in Film programs)</h5>
+            <p>
+            <ul>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> Selected projects in the <span
+                        class="boldL">Premium and Women in Film</span> categories will receive an offer for potential
+                    production and/or adaptation.</li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> However, Vilpa Films is <span
+                        class="boldL">not obligated</span> to produce the script if no agreement is reached with the
+                    artist regarding the creative basis and production guidelines.</li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> Receiving an offer does <span
+                        class="boldL">not imply direct payment, royalties, or financial compensation</span> solely by
+                    virtue of winning the call.</li>
+            </ul>
+            </p>
+        </div>
+        <hr>
+        <div class="row">
+            <h5 class="boldL">6. Development Process</h5>
+            <p>
+            <ul>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> Writers receiving <span
+                        class="boldL">notes for improvement</span> as part of the development process must revise and
+                    improve their script as a condition of moving forward in production consideration.</li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> Failure to comply may result in the
+                    project being withdrawn from consideration.</li>
 
+            </ul>
+            </p>
+        </div>
+        <hr>
+        <div class="row">
+            <h5 class="boldL">7. Legal & Liability Disclaimer</h5>
+            <p>
+            <ul>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> Submissions are <span
+                        class="boldL">final and non-refundable.</span> Fees will not be reimbursed under any
+                    circumstances.</li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> By applying, you confirm that your
+                    submission is original and that you hold all necessary rights. Vilpa Films assumes no liability for
+                    any disputes arising from authorship or ownership of submitted materials.</li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> Participation in the call does not
+                    create an employment relationship, financial entitlement, or guarantee of distribution/production
+                    unless expressly agreed upon in writing between the artist and Vilpa Films.</li>
+
+            </ul>
+            </p>
+        </div>
+        <hr>
+        <div class="row">
+            <h5 class="boldL">8. Agreement</h5>
+            <p>
+                By applying, you <span class="boldL">acknowledge, confirm, and agree</span> to these Terms & Conditions.
+                <br>
+                <span class="boldL">By applying, you state that you have read and agreed to the Terms & Conditions of
+                    this program.</span>
+            </p>
+        </div>
+        <div class="row">
+            <h5>I have read and understood the Terms & Conditions</h5> <br>
+            <a class="waves-effect waves-light btn-large #263238 blue-grey darken-4"
+                onclick="location.href='/koverage';">Go to the coverage programs</a>
+
+        </div> <br>
     </div>
 </div>
