--- a/views/koverage.handlebars
+++ b/views/koverage.handlebars
@@ -16,8 +16,10 @@
                     the chance to be considered <br> by Vilpa Films for production.
 
                 </h5>
-                <p class="boldL" style="color: blue;">*By applying, you state that you have read and agreed to the terms and conditions of this program*</p>
-                <a class="waves-effect waves-light btn-large #263238 blue-grey darken-4" onclick="location.href='/terms-koverage';">See the terms and conditions first</a>
+                <p class="boldL" style="color: blue;">*By applying, you state that you have read and agreed to the terms
+                    and conditions of this program*</p>
+                <a class="waves-effect waves-light btn-large #263238 blue-grey darken-4"
+                    onclick="location.href='/terms-koverage';">See the terms and conditions first</a>
 
             </div>
             <div class="col m2 s12"></div>
@@ -25,16 +27,16 @@
     </div>
     <div class="container centered titleSiguenos">
         <div class="row">
-            <div class="col s12 m6">
+            <div class="col s12 m4">
                 <div class="card #37474f blue-grey darken-3">
                     <div class="card-image">
-                        <img src="/assets/images/live-action.jpg">
+                        <img src="/assets/images/basicC.jpg">
                     </div>
                     <div class="card-content " style="color: white;">
-                        <h5>Fictional short films shot with real actors, in any genre or style, up to 30 minutes in
-                            length.
-                            <hr> * Each submission fee covers one film only *
-                            <hr> £36.88 GBP
+                        <h5>Short film scripts, written in English, up to 30 pages. <br> <br> Submitted exclusively for
+                            feedback, and includes a 30-minute call with the team.
+                            <hr> * Each submission fee covers one script only *
+                            <hr> £140.00 GBP
                         </h5>
 
                     </div>
@@ -43,16 +45,34 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 m6">
+            <div class="col s12 m4">
                 <div class="card #37474f blue-grey darken-3">
                     <div class="card-image">
-                        <img src="/assets/images/animation.jpg">
+                        <img src="/assets/images/womenC.jpg">
                     </div>
                     <div class="card-content " style="color: white;">
-                        <h5>Short films created through animation, in any genre or style, up to 30 minutes
-                            in length.
-                            <hr> * Each submission fee covers one film only *
-                            <hr> £36.88 GBP
+                        <h5>Short film scripts in English, up to 30 pages. <br><br> Exclusively for women writers.
+                            Feedback, production consideration and a 30 minute call with the team.
+                            <hr> * Each submission fee covers one script only *
+                            <hr> £190.00 GBP
+                        </h5>
+
+                    </div>
+                    <div class="card-action ">
+                        <h5> <a href="https://buy.stripe.com/fZu7sL60P3IY3Is5nC1Nu0b">Start submission</a></h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m4">
+                <div class="card #37474f blue-grey darken-3">
+                    <div class="card-image">
+                        <img src="/assets/images/premiumC.jpg">
+                    </div>
+                    <div class="card-content " style="color: white;">
+                        <h5>Open to the general public. <br> <br> Includes feedback, a chance for production consideration and a
+                            30 minute call with the team.
+                            <hr> * Each submission fee covers one script only *
+                            <hr> £190.00 GBP
                         </h5>
 
                     </div>
@@ -62,43 +82,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col s12 m6">
-                <div class="card #37474f blue-grey darken-3">
-                    <div class="card-image">
-                        <img src="/assets/images/documentary.jpg">
-                    </div>
-                    <div class="card-content " style="color: white;">
-                        <h5>Real stories or exploring factual subjects, up to 30 minutes
-                            in length.
-                            <hr> * Each submission fee covers one film only *
-                            <hr> £36.88 GBP
-                        </h5>
 
-                    </div>
-                    <div class="card-action ">
-                        <h5> <a href="https://buy.stripe.com/bJe28rbl93IY4Mw4jy1Nu0c">Start submission</a></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m6">
-                <div class="card #37474f blue-grey darken-3">
-                    <div class="card-image">
-                        <img src="/assets/images/experimental.jpg">
-                    </div>
-                    <div class="card-content " style="color: white;">
-                        <h5>Unconventional storytelling, structure, or visual style, up to 30 minutes in length.
-                            <hr> * Each submission fee covers one film only *
-                            <hr> £36.88 GBP
-                        </h5>
-
-                    </div>
-                    <div class="card-action ">
-                        <h5> <a href="https://buy.stripe.com/eVqeVd9d14N24Mw03i1Nu0d">Start submission</a></h5>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="row">
             <p style="font-style: italic; font-size: 1.5rem">You can also reach us through e-mail:
                 business@vilpafilms.com
