added new popkrn

--- a/views/terms-koverage.handlebars
+++ b/views/terms-koverage.handlebars
@@ -119,6 +119,8 @@
                 <li><i class="material-icons" style="font-size: 13px;">send</i> Participation in the call does not
                     create an employment relationship, financial entitlement, or guarantee of distribution/production
                     unless expressly agreed upon in writing between the artist and Vilpa Films.</li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> <span class="boldL">Vilpa Films reserves the right to modify
+                    or update these Terms & Conditions at any time without prior notice.</span></li>
 
             </ul>
             </p>
