--- a/views/broadkst-checkout-documentary.handlebars
+++ b/views/broadkst-checkout-documentary.handlebars
@@ -5,6 +5,6 @@
     <div class="container centered">
         <iframe
             src="https://docs.google.com/forms/d/e/1FAIpQLSfppAD7IUQbc7HS60oc-p8UCJ0LpQ4VcHctk1hR8Pam6MMVJg/viewform?embedded=true"
-            width="640" height="3040" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+            width="100%" height="3040" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
     </div>
 </div>
