--- a/views/koverage.handlebars
+++ b/views/koverage.handlebars
@@ -6,14 +6,14 @@
         <div class="row"> <br>
             <div class="centered">
                 <hr>
-                <h2 class="boldL ">A CHANCE TO GET YOUR SCRIPT PRODUCED</h2> <br>
+                <h2 class="boldL ">GET YOUR SCRIPT OR BOOK PRODUCED</h2> <br>
             </div>
             <hr>
             <div class="col m2 s12"></div>
             <div class="col m8 s12 ">
                 <h5 class="boldL">Engage directly with the industry through our coverage programs <br> <br>
-                    Apply to receive industry-level notes and a 30-minute call with us to strengthen your script. Get
-                    the chance to be considered <br> by Vilpa Films for production.
+                    Apply to receive industry-level notes and a 30-minute call with us to strengthen your script. GET A
+                    CHANCE to be considered <br> by Vilpa Films for production.
 
                 </h5>
                 <p class="boldL" style="color: blue;">*By applying, you state that you have read and agreed to the terms
@@ -41,7 +41,7 @@
 
                     </div>
                     <div class="card-action ">
-                        <h5> <a href="https://buy.stripe.com/9B68wP60P1AQ2EocQ41Nu0a">Start submission</a></h5>
+                        <h5> <a href="https://buy.stripe.com/28E8wP3SH93ia6Q7vK1Nu0e">Start submission</a></h5>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
 
                     </div>
                     <div class="card-action ">
-                        <h5> <a href="https://buy.stripe.com/fZu7sL60P3IY3Is5nC1Nu0b">Start submission</a></h5>
+                        <h5> <a href="https://buy.stripe.com/28E7sLgFt4N2a6QeYc1Nu0f">Start submission</a></h5>
                     </div>
                 </div>
             </div>
@@ -69,7 +69,8 @@
                         <img src="/assets/images/premiumC.jpg">
                     </div>
                     <div class="card-content " style="color: white;">
-                        <h5>Open to the general public. <br> <br> Includes feedback, a chance for production consideration and a
+                        <h5>Open to the general public. <br> <br> Includes feedback, a chance for production
+                            consideration and a
                             30 minute call with the team.
                             <hr> * Each submission fee covers one script only *
                             <hr> £190.00 GBP
@@ -77,10 +78,33 @@
 
                     </div>
                     <div class="card-action ">
-                        <h5> <a href="https://buy.stripe.com/fZu7sL60P3IY3Is5nC1Nu0b">Start submission</a></h5>
+                        <h5> <a href="https://buy.stripe.com/00w28r60P1AQ6UE7vK1Nu0g">Start submission</a></h5>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row">
+            <div class="col s12 m3"></div>
+            <div class="col s12 m6">
+                <div class="card #37474f blue-grey darken-3">
+                    <div class="card-image">
+                        <img src="/assets/images/booksKoverage.jpg">
+                    </div>
+                    <div class="card-content " style="color: white;">
+                        <h5>Open to the general public. <br> <br> Includes feedback, a chance for production
+                            consideration and a
+                            30 minute call with the team.
+                            <hr> * Each submission fee covers one book only * Accepting books in Spanish and English
+                            <hr> £240.00 GBP
+                        </h5>
+
+                    </div>
+                    <div class="card-action ">
+                        <h5> <a href="https://buy.stripe.com/eVq14ncpdbbq2Eo8zO1Nu0h">Start submission</a></h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m3"></div>
         </div>
 
         <div class="row">
@@ -91,9 +115,9 @@
         <div class="row">
             <p class="boldL" style="color: red;">
                 Disclaimer:
-                Please note that submitting your script does not guarantee or confirm production by Vilpa Films. Only
-                scripts in English are accepted at this time, and we only review short films, not features. Submissions
-                are final and should only be made if you believe your script has the quality necessary to be considered.
+                Please note that submitting your script or book does not guarantee or confirm production by Vilpa Films. Only
+                short scripts in English are accepted at this time and for books, we accept English and Spanish. Submissions
+                are final and should only be made if you believe your script or book has the quality necessary to be considered.
                 We encourage you to carefully review your materials before submitting to ensure your project is
                 presented at its best.
             </p>
