--- a/views/terms-koverage.handlebars
+++ b/views/terms-koverage.handlebars
@@ -39,13 +39,21 @@
                         Film:</span>
                     Exclusively open to women. This category includes coverage services plus the opportunity to be
                     considered for production/adaptation.</li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> <span class="boldl">Books
+                        Koverage:</span>
+                    Open exclusively to published authors. This category includes coverage services tailored to the
+                    publishing and film markets, with the chance for selected projects to be considered for adaptation
+                    and/or production as a short film.</li>
             </ul> <br>
             Scripts must meet the following criteria: <br> <br>
             <ul>
                 <li><i class="material-icons" style="font-size: 13px;">send</i> Written <span class="boldL">only in
                         English.</span></li>
                 <li><i class="material-icons" style="font-size: 13px;">send</i> Must be <span class="boldL">short films
-                        only.</span> Feature-length scripts are not accepted.</li>
+                        only</span> for Basic, Premium, and Women in Film (feature-length scripts are not accepted).
+                </li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> For <span class="boldL">Books
+                        Koverage,</span> only published books are eligible.</li>
 
             </ul>
             </p>
@@ -63,7 +71,7 @@
         <hr>
         <div class="row">
             <h5 class="boldL">4. Coverage Services Provided</h5>
-            <p>All three categories (Basic, Premium, Women in Film) include the following services:
+            <p>All categories (Basic, Premium, Women in Film, Books Koverage) include the following services:
             <ul>
                 <li><i class="material-icons" style="font-size: 13px;">send</i> A <span class="boldL">3-page
                         industry-level coverage report</span> analyzing project viability and market potential.</li>
@@ -80,8 +88,8 @@
             <p>
             <ul>
                 <li><i class="material-icons" style="font-size: 13px;">send</i> Selected projects in the <span
-                        class="boldL">Premium and Women in Film</span> categories will receive an offer for potential
-                    production and/or adaptation.</li>
+                        class="boldL">Premium, Women in Film, and Books Koverage</span> categories will receive an offer
+                    for potential production and/or adaptation.</li>
                 <li><i class="material-icons" style="font-size: 13px;">send</i> However, Vilpa Films is <span
                         class="boldL">not obligated</span> to produce the script if no agreement is reached with the
                     artist regarding the creative basis and production guidelines.</li>
@@ -96,7 +104,7 @@
             <h5 class="boldL">6. Development Process</h5>
             <p>
             <ul>
-                <li><i class="material-icons" style="font-size: 13px;">send</i> Writers receiving <span
+                <li><i class="material-icons" style="font-size: 13px;">send</i> Writers/authors receiving <span
                         class="boldL">notes for improvement</span> as part of the development process must revise and
                     improve their script as a condition of moving forward in production consideration.</li>
                 <li><i class="material-icons" style="font-size: 13px;">send</i> Failure to comply may result in the
@@ -119,8 +127,9 @@
                 <li><i class="material-icons" style="font-size: 13px;">send</i> Participation in the call does not
                     create an employment relationship, financial entitlement, or guarantee of distribution/production
                     unless expressly agreed upon in writing between the artist and Vilpa Films.</li>
-                <li><i class="material-icons" style="font-size: 13px;">send</i> <span class="boldL">Vilpa Films reserves the right to modify
-                    or update these Terms & Conditions at any time without prior notice.</span></li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> <span class="boldL">Vilpa Films reserves
+                        the right to modify
+                        or update these Terms & Conditions at any time without prior notice.</span></li>
 
             </ul>
             </p>
