--- a/views/broadkst-checkout-experimental.handlebars
+++ b/views/broadkst-checkout-experimental.handlebars
@@ -5,6 +5,6 @@
     <div class="container centered">
         <iframe
             src="https://docs.google.com/forms/d/e/1FAIpQLSesJy8ybyeMwPf7FkqHsM8z9ws_cR-1DWr18o54n6MDLchnrg/viewform?embedded=true"
-            width="640" height="3040" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+            width="100%" height="3040" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
     </div>
 </div>
