--- a/views/broadkst.handlebars
+++ b/views/broadkst.handlebars
@@ -15,6 +15,10 @@
                     film.
 
                 </h5>
+                <p class="boldL" style="color: blue;">*By applying, you state that you have read and agreed to the terms
+                    and conditions of this program*</p>
+                <a class="waves-effect waves-light btn-large #263238 blue-grey darken-4"
+                    onclick="location.href='/terms-broadkst';">See the terms and conditions first</a>
             </div>
             <div class="col m2 s12"></div>
         </div>
