--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="">
-    <meta name="description" content="Escritor de novela de crimen">
+    <meta name="description" content="Home of Oscar-winning films and bold independent voices, Vilpa Films is a production company that brings visionary stories to global festivals and audiences">
     <meta name="keywords"
-        content="Impresión, vinil, backlite, Publicidad impresa, Medios impresos, Stoppers, espectaculares, Valla publicitarias, Material pop, Banners, Lonas, Viniles, Imprenta, Cenefa, Mupi, Posters, Danglers, Standees, Mantas, Faldones, Signs, Anuncios espectaculares, Anuncios impresos, Precio de espectaculares, Medios masivos">
+        content="Oscar-winning films, independent filmmakers, film production company, international film festivals, Cannes films, Berlín films, curated cinema, global distribution, award-winning films, film development, film pre-production, film coverage, script coverage, emerging filmmakers, film industry UK, film industry MENA">
     <link rel="shortcut icon" href="assets/images/logoTab.png">
     <script src="https://kit.fontawesome.com/a077a0470e.js" crossorigin="anonymous"></script>
     <title>Vilpa Films</title>
