--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -86,12 +86,12 @@
         </div>
         <div class="container">
             <div class="row">
-                <h1>Other projects:</h1>
+                <h1>Films:</h1>
                 <br>
                 <div class="col s12 m4">
                     <div class="card ">
                         <div class="card-image" onclick="location.href='#';">
-                            <img src="/assets/images/blue.jpg">
+                            <img src="/assets/images/nocturnePost.jpg">
                         </div>
 
                     </div>
@@ -99,7 +99,7 @@
                 <div class="col s12 m4">
                     <div class="card ">
                         <div class="card-image" onclick="location.href='#';">
-                            <img src="/assets/images/kreativaMontreal.jpg">
+                            <img src="/assets/images/allCrowns.jpg">
 
 
                         </div>
